--- a/webfont.html
+++ b/webfont.html
@@ -14,7 +14,7 @@
         font-family: sans-serif;
         margin: 0;
         padding: 40px;
-        font-family:DINWeb;
+        font-family:DINNEXTArabic;
       }
     </style>
   </head>
@@ -47,10 +47,11 @@
     </div>
 
 </body>
-  <script>
+
+    <script>
     document.body.onload = function() {
       var xhr = new XMLHttpRequest();
-      var url = 'https://do9f0cpkv689t.cloudfront.net/Resource/Font/DINWeb.woff';
+      var url = 'https://raw.githubusercontent.com/sujileshKK/webfont/master/font.css';
       
       xhr.open('GET', url, true);
       xhr.onreadystatechange = function () {
@@ -64,7 +65,4 @@
       
     }
   </script>
-</html>
-
-
 </html>
